fixed screenshots not showing + removed loading more on daily as now screenshots are loaded per day + spinner on screenshots tab

--- a/src/assets/style-dark.css
+++ b/src/assets/style-dark.css
@@ -1258,3 +1258,7 @@ h4 {
     color: var(--white-87);
     border: transparent;
 }
+
+.spinnerHeigth{
+    height: 50px;
+}
